hphp/hack/test/typecheck/reactive/owned_mutable8.php
<?hh
class A {
  // ERROR
  public function f(<<__OwnedMutable>> A $a): void {
  }
}
